F++/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    not

Grammar

Rule 0     S' -> program
Rule 1     program -> var func mainProgram
Rule 2     var -> type varSequence semicolon var
Rule 3     var -> <empty>
Rule 4     varSequence -> variable equal arithmeticExpression
Rule 5     varSequence -> variable
Rule 6     varSequence -> variable equal arithmeticExpression comma varSequence
Rule 7     varSequence -> variable comma varSequence
Rule 8     variable -> id dimentions
Rule 9     dimentions -> openBracket value closeBracket
Rule 10    dimentions -> openBracket value closeBracket openBracket value closeBracket
Rule 11    dimentions -> <empty>
Rule 12    type -> int
Rule 13    type -> double
Rule 14    arithmeticExpression -> multiplyDivide
Rule 15    arithmeticExpression -> arithmeticExpression plus ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET
Rule 16    arithmeticExpression -> arithmeticExpression minus ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET
Rule 17    multiplyDivide -> val
Rule 18    multiplyDivide -> multiplyDivide multiply ACTION_ADD_OPERATOR val ACTION_ADD_QUADRUPLET
Rule 19    multiplyDivide -> multiplyDivide divide ACTION_ADD_OPERATOR val ACTION_ADD_QUADRUPLET
Rule 20    val -> value
Rule 21    val -> unaryExpression
Rule 22    val -> openParenthesis arithmeticExpression closeParenthesis
Rule 23    unaryExpression -> id plusPlus
Rule 24    unaryExpression -> id minusMinus
Rule 25    unaryExpression -> plusPlus id
Rule 26    unaryExpression -> minusMinus id
Rule 27    value -> intValue ACTION_INT_VALUE
Rule 28    value -> doubleValue ACTION_DOUBLE_VALUE
Rule 29    value -> id ACTION_VAR_VALUE
Rule 30    func -> function id openParenthesis closeParenthesis openBrace subroutine closeBrace func
Rule 31    func -> <empty>
Rule 32    mainProgram -> main openParenthesis closeParenthesis openBrace subroutine closeBrace
Rule 33    subroutine -> consoleWrite openParenthesis cout closeParenthesis semicolon subroutine
Rule 34    subroutine -> consoleRead openParenthesis id closeParenthesis semicolon subroutine
Rule 35    subroutine -> if openParenthesis statement closeParenthesis ACTION_QUADRUPLET_EMPTY_JUMP openBrace subroutine closeBrace ACTION_NEW_IF ACTION_QUADRUPLET_EMPTY_JUMP_END_IF elseStatement ACTION_FILL_JUMP_END_IF subroutine
Rule 36    subroutine -> while openParenthesis statement closeParenthesis openBrace subroutine closeBrace subroutine
Rule 37    subroutine -> for openParenthesis varSequence semicolon statement semicolon arithmeticExpression closeParenthesis openBrace subroutine closeBrace subroutine
Rule 38    subroutine -> id equal arithmeticExpression ACTION_GENERATE_QUADRUPLET semicolon subroutine
Rule 39    subroutine -> unaryExpression semicolon subroutine
Rule 40    subroutine -> call id openParenthesis closeParenthesis semicolon subroutine
Rule 41    subroutine -> <empty>
Rule 42    elseStatement -> elif ACTION_FILL_JUMP openParenthesis statement closeParenthesis ACTION_QUADRUPLET_EMPTY_JUMP openBrace subroutine closeBrace ACTION_QUADRUPLET_EMPTY_JUMP_END_IF elseStatement
Rule 43    elseStatement -> else ACTION_FILL_JUMP openBrace subroutine closeBrace
Rule 44    elseStatement -> ACTION_FILL_JUMP
Rule 45    statement -> arithmeticExpression
Rule 46    statement -> arithmeticExpression logicExpression ACTION_ADD_OPERATOR arithmeticExpression ACTION_ADD_QUADRUPLET
Rule 47    statement -> statement logicExpression statement
Rule 48    logicExpression -> greaterThan
Rule 49    logicExpression -> lessThan
Rule 50    logicExpression -> isEqual
Rule 51    logicExpression -> notEqual
Rule 52    logicExpression -> greaterOrEqual
Rule 53    logicExpression -> lessOrEqual
Rule 54    logicExpression -> and
Rule 55    logicExpression -> or
Rule 56    cout -> arithmeticExpression
Rule 57    cout -> string
Rule 58    ACTION_VAR_VALUE -> <empty>
Rule 59    ACTION_INT_VALUE -> <empty>
Rule 60    ACTION_DOUBLE_VALUE -> <empty>
Rule 61    ACTION_ADD_OPERATOR -> <empty>
Rule 62    ACTION_GENERATE_QUADRUPLET -> <empty>
Rule 63    ACTION_ADD_QUADRUPLET -> <empty>
Rule 64    ACTION_QUADRUPLET_EMPTY_JUMP -> <empty>
Rule 65    ACTION_NEW_IF -> <empty>
Rule 66    ACTION_QUADRUPLET_EMPTY_JUMP_END_IF -> <empty>
Rule 67    ACTION_FILL_JUMP_END_IF -> <empty>
Rule 68    ACTION_FILL_JUMP -> <empty>

Terminals, with rules where they appear

and                  : 54
call                 : 40
closeBrace           : 30 32 35 36 37 42 43
closeBracket         : 9 10 10
closeParenthesis     : 22 30 32 33 34 35 36 37 40 42
comma                : 6 7
consoleRead          : 34
consoleWrite         : 33
divide               : 19
double               : 13
doubleValue          : 28
elif                 : 42
else                 : 43
equal                : 4 6 38
error                : 
for                  : 37
function             : 30
greaterOrEqual       : 52
greaterThan          : 48
id                   : 8 23 24 25 26 29 30 34 38 40
if                   : 35
int                  : 12
intValue             : 27
isEqual              : 50
lessOrEqual          : 53
lessThan             : 49
main                 : 32
minus                : 16
minusMinus           : 24 26
multiply             : 18
not                  : 
notEqual             : 51
openBrace            : 30 32 35 36 37 42 43
openBracket          : 9 10 10
openParenthesis      : 22 30 32 33 34 35 36 37 40 42
or                   : 55
plus                 : 15
plusPlus             : 23 25
semicolon            : 2 33 34 37 37 38 39 40
string               : 57
while                : 36

Nonterminals, with rules where they appear

ACTION_ADD_OPERATOR  : 15 16 18 19 46
ACTION_ADD_QUADRUPLET : 15 16 18 19 46
ACTION_DOUBLE_VALUE  : 28
ACTION_FILL_JUMP     : 42 43 44
ACTION_FILL_JUMP_END_IF : 35
ACTION_GENERATE_QUADRUPLET : 38
ACTION_INT_VALUE     : 27
ACTION_NEW_IF        : 35
ACTION_QUADRUPLET_EMPTY_JUMP : 35 42
ACTION_QUADRUPLET_EMPTY_JUMP_END_IF : 35 42
ACTION_VAR_VALUE     : 29
arithmeticExpression : 4 6 15 16 22 37 38 45 46 46 56
cout                 : 33
dimentions           : 8
elseStatement        : 35 42
func                 : 1 30
logicExpression      : 46 47
mainProgram          : 1
multiplyDivide       : 14 15 16 18 19
program              : 0
statement            : 35 36 37 42 47 47
subroutine           : 30 32 33 34 35 35 36 36 37 37 38 39 40 42 43
type                 : 2
unaryExpression      : 21 39
val                  : 17 18 19
value                : 9 10 10 20
var                  : 1 2
varSequence          : 2 6 7 37
variable             : 4 5 6 7

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . var func mainProgram
    (2) var -> . type varSequence semicolon var
    (3) var -> .
    (12) type -> . int
    (13) type -> . double

    function        reduce using rule 3 (var -> .)
    main            reduce using rule 3 (var -> .)
    int             shift and go to state 4
    double          shift and go to state 5

    program                        shift and go to state 1
    var                            shift and go to state 2
    type                           shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> var . func mainProgram
    (30) func -> . function id openParenthesis closeParenthesis openBrace subroutine closeBrace func
    (31) func -> .

    function        shift and go to state 7
    main            reduce using rule 31 (func -> .)

    func                           shift and go to state 6

state 3

    (2) var -> type . varSequence semicolon var
    (4) varSequence -> . variable equal arithmeticExpression
    (5) varSequence -> . variable
    (6) varSequence -> . variable equal arithmeticExpression comma varSequence
    (7) varSequence -> . variable comma varSequence
    (8) variable -> . id dimentions

    id              shift and go to state 10

    varSequence                    shift and go to state 8
    variable                       shift and go to state 9

state 4

    (12) type -> int .

    id              reduce using rule 12 (type -> int .)


state 5

    (13) type -> double .

    id              reduce using rule 13 (type -> double .)


state 6

    (1) program -> var func . mainProgram
    (32) mainProgram -> . main openParenthesis closeParenthesis openBrace subroutine closeBrace

    main            shift and go to state 12

    mainProgram                    shift and go to state 11

state 7

    (30) func -> function . id openParenthesis closeParenthesis openBrace subroutine closeBrace func

    id              shift and go to state 13


state 8

    (2) var -> type varSequence . semicolon var

    semicolon       shift and go to state 14


state 9

    (4) varSequence -> variable . equal arithmeticExpression
    (5) varSequence -> variable .
    (6) varSequence -> variable . equal arithmeticExpression comma varSequence
    (7) varSequence -> variable . comma varSequence

    equal           shift and go to state 15
    semicolon       reduce using rule 5 (varSequence -> variable .)
    comma           shift and go to state 16


state 10

    (8) variable -> id . dimentions
    (9) dimentions -> . openBracket value closeBracket
    (10) dimentions -> . openBracket value closeBracket openBracket value closeBracket
    (11) dimentions -> .

    openBracket     shift and go to state 18
    equal           reduce using rule 11 (dimentions -> .)
    comma           reduce using rule 11 (dimentions -> .)
    semicolon       reduce using rule 11 (dimentions -> .)

    dimentions                     shift and go to state 17

state 11

    (1) program -> var func mainProgram .

    $end            reduce using rule 1 (program -> var func mainProgram .)


state 12

    (32) mainProgram -> main . openParenthesis closeParenthesis openBrace subroutine closeBrace

    openParenthesis shift and go to state 19


state 13

    (30) func -> function id . openParenthesis closeParenthesis openBrace subroutine closeBrace func

    openParenthesis shift and go to state 20


state 14

    (2) var -> type varSequence semicolon . var
    (2) var -> . type varSequence semicolon var
    (3) var -> .
    (12) type -> . int
    (13) type -> . double

    function        reduce using rule 3 (var -> .)
    main            reduce using rule 3 (var -> .)
    int             shift and go to state 4
    double          shift and go to state 5

    type                           shift and go to state 3
    var                            shift and go to state 21

state 15

    (4) varSequence -> variable equal . arithmeticExpression
    (6) varSequence -> variable equal . arithmeticExpression comma varSequence
    (14) arithmeticExpression -> . multiplyDivide
    (15) arithmeticExpression -> . arithmeticExpression plus ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET
    (16) arithmeticExpression -> . arithmeticExpression minus ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET
    (17) multiplyDivide -> . val
    (18) multiplyDivide -> . multiplyDivide multiply ACTION_ADD_OPERATOR val ACTION_ADD_QUADRUPLET
    (19) multiplyDivide -> . multiplyDivide divide ACTION_ADD_OPERATOR val ACTION_ADD_QUADRUPLET
    (20) val -> . value
    (21) val -> . unaryExpression
    (22) val -> . openParenthesis arithmeticExpression closeParenthesis
    (27) value -> . intValue ACTION_INT_VALUE
    (28) value -> . doubleValue ACTION_DOUBLE_VALUE
    (29) value -> . id ACTION_VAR_VALUE
    (23) unaryExpression -> . id plusPlus
    (24) unaryExpression -> . id minusMinus
    (25) unaryExpression -> . plusPlus id
    (26) unaryExpression -> . minusMinus id

    openParenthesis shift and go to state 27
    intValue        shift and go to state 28
    doubleValue     shift and go to state 29
    id              shift and go to state 30
    plusPlus        shift and go to state 31
    minusMinus      shift and go to state 32

    arithmeticExpression           shift and go to state 22
    multiplyDivide                 shift and go to state 23
    val                            shift and go to state 24
    value                          shift and go to state 25
    unaryExpression                shift and go to state 26

state 16

    (7) varSequence -> variable comma . varSequence
    (4) varSequence -> . variable equal arithmeticExpression
    (5) varSequence -> . variable
    (6) varSequence -> . variable equal arithmeticExpression comma varSequence
    (7) varSequence -> . variable comma varSequence
    (8) variable -> . id dimentions

    id              shift and go to state 10

    variable                       shift and go to state 9
    varSequence                    shift and go to state 33

state 17

    (8) variable -> id dimentions .

    equal           reduce using rule 8 (variable -> id dimentions .)
    comma           reduce using rule 8 (variable -> id dimentions .)
    semicolon       reduce using rule 8 (variable -> id dimentions .)


state 18

    (9) dimentions -> openBracket . value closeBracket
    (10) dimentions -> openBracket . value closeBracket openBracket value closeBracket
    (27) value -> . intValue ACTION_INT_VALUE
    (28) value -> . doubleValue ACTION_DOUBLE_VALUE
    (29) value -> . id ACTION_VAR_VALUE

    intValue        shift and go to state 28
    doubleValue     shift and go to state 29
    id              shift and go to state 35

    value                          shift and go to state 34

state 19

    (32) mainProgram -> main openParenthesis . closeParenthesis openBrace subroutine closeBrace

    closeParenthesis shift and go to state 36


state 20

    (30) func -> function id openParenthesis . closeParenthesis openBrace subroutine closeBrace func

    closeParenthesis shift and go to state 37


state 21

    (2) var -> type varSequence semicolon var .

    function        reduce using rule 2 (var -> type varSequence semicolon var .)
    main            reduce using rule 2 (var -> type varSequence semicolon var .)


state 22

    (4) varSequence -> variable equal arithmeticExpression .
    (6) varSequence -> variable equal arithmeticExpression . comma varSequence
    (15) arithmeticExpression -> arithmeticExpression . plus ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET
    (16) arithmeticExpression -> arithmeticExpression . minus ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET

    semicolon       reduce using rule 4 (varSequence -> variable equal arithmeticExpression .)
    comma           shift and go to state 38
    plus            shift and go to state 39
    minus           shift and go to state 40


state 23

    (14) arithmeticExpression -> multiplyDivide .
    (18) multiplyDivide -> multiplyDivide . multiply ACTION_ADD_OPERATOR val ACTION_ADD_QUADRUPLET
    (19) multiplyDivide -> multiplyDivide . divide ACTION_ADD_OPERATOR val ACTION_ADD_QUADRUPLET

    comma           reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    plus            reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    minus           reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    semicolon       reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    closeParenthesis reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    greaterThan     reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    lessThan        reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    isEqual         reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    notEqual        reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    greaterOrEqual  reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    lessOrEqual     reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    and             reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    or              reduce using rule 14 (arithmeticExpression -> multiplyDivide .)
    multiply        shift and go to state 41
    divide          shift and go to state 42


state 24

    (17) multiplyDivide -> val .

    multiply        reduce using rule 17 (multiplyDivide -> val .)
    divide          reduce using rule 17 (multiplyDivide -> val .)
    comma           reduce using rule 17 (multiplyDivide -> val .)
    plus            reduce using rule 17 (multiplyDivide -> val .)
    minus           reduce using rule 17 (multiplyDivide -> val .)
    semicolon       reduce using rule 17 (multiplyDivide -> val .)
    closeParenthesis reduce using rule 17 (multiplyDivide -> val .)
    greaterThan     reduce using rule 17 (multiplyDivide -> val .)
    lessThan        reduce using rule 17 (multiplyDivide -> val .)
    isEqual         reduce using rule 17 (multiplyDivide -> val .)
    notEqual        reduce using rule 17 (multiplyDivide -> val .)
    greaterOrEqual  reduce using rule 17 (multiplyDivide -> val .)
    lessOrEqual     reduce using rule 17 (multiplyDivide -> val .)
    and             reduce using rule 17 (multiplyDivide -> val .)
    or              reduce using rule 17 (multiplyDivide -> val .)


state 25

    (20) val -> value .

    multiply        reduce using rule 20 (val -> value .)
    divide          reduce using rule 20 (val -> value .)
    comma           reduce using rule 20 (val -> value .)
    plus            reduce using rule 20 (val -> value .)
    minus           reduce using rule 20 (val -> value .)
    semicolon       reduce using rule 20 (val -> value .)
    closeParenthesis reduce using rule 20 (val -> value .)
    greaterThan     reduce using rule 20 (val -> value .)
    lessThan        reduce using rule 20 (val -> value .)
    isEqual         reduce using rule 20 (val -> value .)
    notEqual        reduce using rule 20 (val -> value .)
    greaterOrEqual  reduce using rule 20 (val -> value .)
    lessOrEqual     reduce using rule 20 (val -> value .)
    and             reduce using rule 20 (val -> value .)
    or              reduce using rule 20 (val -> value .)


state 26

    (21) val -> unaryExpression .

    multiply        reduce using rule 21 (val -> unaryExpression .)
    divide          reduce using rule 21 (val -> unaryExpression .)
    comma           reduce using rule 21 (val -> unaryExpression .)
    plus            reduce using rule 21 (val -> unaryExpression .)
    minus           reduce using rule 21 (val -> unaryExpression .)
    semicolon       reduce using rule 21 (val -> unaryExpression .)
    closeParenthesis reduce using rule 21 (val -> unaryExpression .)
    greaterThan     reduce using rule 21 (val -> unaryExpression .)
    lessThan        reduce using rule 21 (val -> unaryExpression .)
    isEqual         reduce using rule 21 (val -> unaryExpression .)
    notEqual        reduce using rule 21 (val -> unaryExpression .)
    greaterOrEqual  reduce using rule 21 (val -> unaryExpression .)
    lessOrEqual     reduce using rule 21 (val -> unaryExpression .)
    and             reduce using rule 21 (val -> unaryExpression .)
    or              reduce using rule 21 (val -> unaryExpression .)


state 27

    (22) val -> openParenthesis . arithmeticExpression closeParenthesis
    (14) arithmeticExpression -> . multiplyDivide
    (15) arithmeticExpression -> . arithmeticExpression plus ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET
    (16) arithmeticExpression -> . arithmeticExpression minus ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET
    (17) multiplyDivide -> . val
    (18) multiplyDivide -> . multiplyDivide multiply ACTION_ADD_OPERATOR val ACTION_ADD_QUADRUPLET
    (19) multiplyDivide -> . multiplyDivide divide ACTION_ADD_OPERATOR val ACTION_ADD_QUADRUPLET
    (20) val -> . value
    (21) val -> . unaryExpression
    (22) val -> . openParenthesis arithmeticExpression closeParenthesis
    (27) value -> . intValue ACTION_INT_VALUE
    (28) value -> . doubleValue ACTION_DOUBLE_VALUE
    (29) value -> . id ACTION_VAR_VALUE
    (23) unaryExpression -> . id plusPlus
    (24) unaryExpression -> . id minusMinus
    (25) unaryExpression -> . plusPlus id
    (26) unaryExpression -> . minusMinus id

    openParenthesis shift and go to state 27
    intValue        shift and go to state 28
    doubleValue     shift and go to state 29
    id              shift and go to state 30
    plusPlus        shift and go to state 31
    minusMinus      shift and go to state 32

    arithmeticExpression           shift and go to state 43
    multiplyDivide                 shift and go to state 23
    val                            shift and go to state 24
    value                          shift and go to state 25
    unaryExpression                shift and go to state 26

state 28

    (27) value -> intValue . ACTION_INT_VALUE
    (59) ACTION_INT_VALUE -> .

    multiply        reduce using rule 59 (ACTION_INT_VALUE -> .)
    divide          reduce using rule 59 (ACTION_INT_VALUE -> .)
    comma           reduce using rule 59 (ACTION_INT_VALUE -> .)
    plus            reduce using rule 59 (ACTION_INT_VALUE -> .)
    minus           reduce using rule 59 (ACTION_INT_VALUE -> .)
    semicolon       reduce using rule 59 (ACTION_INT_VALUE -> .)
    closeBracket    reduce using rule 59 (ACTION_INT_VALUE -> .)
    closeParenthesis reduce using rule 59 (ACTION_INT_VALUE -> .)
    greaterThan     reduce using rule 59 (ACTION_INT_VALUE -> .)
    lessThan        reduce using rule 59 (ACTION_INT_VALUE -> .)
    isEqual         reduce using rule 59 (ACTION_INT_VALUE -> .)
    notEqual        reduce using rule 59 (ACTION_INT_VALUE -> .)
    greaterOrEqual  reduce using rule 59 (ACTION_INT_VALUE -> .)
    lessOrEqual     reduce using rule 59 (ACTION_INT_VALUE -> .)
    and             reduce using rule 59 (ACTION_INT_VALUE -> .)
    or              reduce using rule 59 (ACTION_INT_VALUE -> .)

    ACTION_INT_VALUE               shift and go to state 44

state 29

    (28) value -> doubleValue . ACTION_DOUBLE_VALUE
    (60) ACTION_DOUBLE_VALUE -> .

    multiply        reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    divide          reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    comma           reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    plus            reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    minus           reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    semicolon       reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    closeBracket    reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    closeParenthesis reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    greaterThan     reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    lessThan        reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    isEqual         reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    notEqual        reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    greaterOrEqual  reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    lessOrEqual     reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    and             reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)
    or              reduce using rule 60 (ACTION_DOUBLE_VALUE -> .)

    ACTION_DOUBLE_VALUE            shift and go to state 45

state 30

    (29) value -> id . ACTION_VAR_VALUE
    (23) unaryExpression -> id . plusPlus
    (24) unaryExpression -> id . minusMinus
    (58) ACTION_VAR_VALUE -> .

    plusPlus        shift and go to state 47
    minusMinus      shift and go to state 48
    multiply        reduce using rule 58 (ACTION_VAR_VALUE -> .)
    divide          reduce using rule 58 (ACTION_VAR_VALUE -> .)
    comma           reduce using rule 58 (ACTION_VAR_VALUE -> .)
    plus            reduce using rule 58 (ACTION_VAR_VALUE -> .)
    minus           reduce using rule 58 (ACTION_VAR_VALUE -> .)
    semicolon       reduce using rule 58 (ACTION_VAR_VALUE -> .)
    closeParenthesis reduce using rule 58 (ACTION_VAR_VALUE -> .)
    greaterThan     reduce using rule 58 (ACTION_VAR_VALUE -> .)
    lessThan        reduce using rule 58 (ACTION_VAR_VALUE -> .)
    isEqual         reduce using rule 58 (ACTION_VAR_VALUE -> .)
    notEqual        reduce using rule 58 (ACTION_VAR_VALUE -> .)
    greaterOrEqual  reduce using rule 58 (ACTION_VAR_VALUE -> .)
    lessOrEqual     reduce using rule 58 (ACTION_VAR_VALUE -> .)
    and             reduce using rule 58 (ACTION_VAR_VALUE -> .)
    or              reduce using rule 58 (ACTION_VAR_VALUE -> .)

    ACTION_VAR_VALUE               shift and go to state 46

state 31

    (25) unaryExpression -> plusPlus . id

    id              shift and go to state 49


state 32

    (26) unaryExpression -> minusMinus . id

    id              shift and go to state 50


state 33

    (7) varSequence -> variable comma varSequence .

    semicolon       reduce using rule 7 (varSequence -> variable comma varSequence .)


state 34

    (9) dimentions -> openBracket value . closeBracket
    (10) dimentions -> openBracket value . closeBracket openBracket value closeBracket

    closeBracket    shift and go to state 51


state 35

    (29) value -> id . ACTION_VAR_VALUE
    (58) ACTION_VAR_VALUE -> .

    closeBracket    reduce using rule 58 (ACTION_VAR_VALUE -> .)

    ACTION_VAR_VALUE               shift and go to state 46

state 36

    (32) mainProgram -> main openParenthesis closeParenthesis . openBrace subroutine closeBrace

    openBrace       shift and go to state 52


state 37

    (30) func -> function id openParenthesis closeParenthesis . openBrace subroutine closeBrace func

    openBrace       shift and go to state 53


state 38

    (6) varSequence -> variable equal arithmeticExpression comma . varSequence
    (4) varSequence -> . variable equal arithmeticExpression
    (5) varSequence -> . variable
    (6) varSequence -> . variable equal arithmeticExpression comma varSequence
    (7) varSequence -> . variable comma varSequence
    (8) variable -> . id dimentions

    id              shift and go to state 10

    variable                       shift and go to state 9
    varSequence                    shift and go to state 54

state 39

    (15) arithmeticExpression -> arithmeticExpression plus . ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET
    (61) ACTION_ADD_OPERATOR -> .

    openParenthesis reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    intValue        reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    doubleValue     reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    id              reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    plusPlus        reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    minusMinus      reduce using rule 61 (ACTION_ADD_OPERATOR -> .)

    ACTION_ADD_OPERATOR            shift and go to state 55

state 40

    (16) arithmeticExpression -> arithmeticExpression minus . ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET
    (61) ACTION_ADD_OPERATOR -> .

    openParenthesis reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    intValue        reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    doubleValue     reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    id              reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    plusPlus        reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    minusMinus      reduce using rule 61 (ACTION_ADD_OPERATOR -> .)

    ACTION_ADD_OPERATOR            shift and go to state 56

state 41

    (18) multiplyDivide -> multiplyDivide multiply . ACTION_ADD_OPERATOR val ACTION_ADD_QUADRUPLET
    (61) ACTION_ADD_OPERATOR -> .

    openParenthesis reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    intValue        reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    doubleValue     reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    id              reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    plusPlus        reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    minusMinus      reduce using rule 61 (ACTION_ADD_OPERATOR -> .)

    ACTION_ADD_OPERATOR            shift and go to state 57

state 42

    (19) multiplyDivide -> multiplyDivide divide . ACTION_ADD_OPERATOR val ACTION_ADD_QUADRUPLET
    (61) ACTION_ADD_OPERATOR -> .

    openParenthesis reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    intValue        reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    doubleValue     reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    id              reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    plusPlus        reduce using rule 61 (ACTION_ADD_OPERATOR -> .)
    minusMinus      reduce using rule 61 (ACTION_ADD_OPERATOR -> .)

    ACTION_ADD_OPERATOR            shift and go to state 58

state 43

    (22) val -> openParenthesis arithmeticExpression . closeParenthesis
    (15) arithmeticExpression -> arithmeticExpression . plus ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET
    (16) arithmeticExpression -> arithmeticExpression . minus ACTION_ADD_OPERATOR multiplyDivide ACTION_ADD_QUADRUPLET

    closeParenthesis shift and go to state 59
    plus            shift and go to state 39
    minus           shift and go to state 40


state 44

    (27) value -> intValue ACTION_INT_VALUE .

    multiply        reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    divide          reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    comma           reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    plus            reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    minus           reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    semicolon       reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    closeBracket    reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    closeParenthesis reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    greaterThan     reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    lessThan        reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    isEqual         reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    notEqual        reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    greaterOrEqual  reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    lessOrEqual     reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    and             reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)
    or              reduce using rule 27 (value -> intValue ACTION_INT_VALUE .)


state 45

    (28) value -> doubleValue ACTION_DOUBLE_VALUE .

    multiply        reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    divide          reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    comma           reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    plus            reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    minus           reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    semicolon       reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    closeBracket    reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    closeParenthesis reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    greaterThan     reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    lessThan        reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    isEqual         reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    notEqual        reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    greaterOrEqual  reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    lessOrEqual     reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    and             reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)
    or              reduce using rule 28 (value -> doubleValue ACTION_DOUBLE_VALUE .)


state 46

    (29) value -> id ACTION_VAR_VALUE .

    multiply        reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    divide          reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    comma           reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    plus            reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    minus           reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    semicolon       reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    closeBracket    reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    closeParenthesis reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    greaterThan     reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    lessThan        reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    isEqual         reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    notEqual        reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    greaterOrEqual  reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    lessOrEqual     reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    and             reduce using rule 29 (value -> id ACTION_VAR_VALUE .)
    or              reduce using rule 29 (value -> id ACTION_VAR_VALUE .)


state 47

    (23) unaryExpression -> id plusPlus .
